white space issue solved

--- a/Day_3_Piano/styles.css
+++ b/Day_3_Piano/styles.css
@@ -1,3 +1,10 @@
+html, body{
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
 body {
   background: #37B2C3;
   overflow: hidden;
@@ -43,7 +50,11 @@ body {
 
 /* *************responsive */
 @media screen and (max-width:500px) {
-  
+  body{
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+  }
   .piano{
     transform: rotate(-90deg);
     height: 70vw;
